services/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - grafana.placeholder
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 443
          weight: 1
